added animation to the social media icon at the footer

--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@ if (navigator.serviceWorker) {
         </div>
     </section>
 <footer>
-    <div class="row">
+    <div class="row footer-content">
         <div class="col span-1-of-2">
              <ul class=" footer-nav footer-nav-left">
                 <li><a href="#">About Us</a></li>
@@ -446,10 +446,10 @@ if (navigator.serviceWorker) {
         </div>
         <div class="col span-1-of-2 social-network">
             <ul class="footer-nav footer-nav-right">
-                <li><a href="#"><ion-icon name="logo-facebook" class="logo-facebook"></ion-icon></a></li>
-                <li><a href="#"><ion-icon name="logo-instagram" class="logo-instagram"></ion-icon></a></li>
-                <li><a href="#"><ion-icon name="logo-twitter" class="logo-twitter"></ion-icon></a></li>
-                <li><a href="#"><ion-icon name="logo-youtube" class="logo-youtube"></ion-icon> </a></li>
+                <li class="btn-media"><a href="#"><ion-icon name="logo-facebook" class=" btn-social logo-facebook"></ion-icon></a></li>
+                <li class="btn-media"><a href="#"><ion-icon name="logo-instagram" class="  btn-social logo-instagram"></ion-icon></a></li>
+                <li class="btn-media"><a href="#"><ion-icon name="logo-twitter" class="  btn-social logo-twitter"></ion-icon></a></li>
+                <li class="btn-media"><a href="#"><ion-icon name="logo-youtube" class=" btn-social logo-youtube"></ion-icon> </a></li>
             </ul>
             <div class="scrolltop"><ion-icon name="arrow-up"></ion-icon></div>
        </div>
